<resources>
    <string name="app_name">Chanity</string>
    <string name="splash_iv">SplashScreen</string>
    <string name="chanity_iv">Chanity Logo</string>
    <string name="WelcomeTitle">Welcome to Chanity!</string>
    <string name="RegisLogin">Please register or login first.</string>
    <string name="getstarted">Get Started</string>
    <string name="signin">Sign In</string>
    <string name="title_welcome_page">Welcome to Chanity!</string>
    <string name="copyright">© 2022 Chanity</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Username</string>
    <string name="title_signup_page">Ready to create your account?</string>
    <string name="title_login_page">Welcome back!</string>
    <string name="message_login_page">Welcome back :)</string>
    <string name="home1">Check your personality by taking this test!</string>
    <string name="home2">The Big Five personality test measures the five personality factors that psychologists have determined are core to our personality makeup. The Five Factors of personality consists of:</string>
    <string name="start_test">Start Test</string>
    <string name="ocean_iv">Ocean Image</string>
    <string name="test1">Answer each question according to how well it describes you. </string>
    <string name="get_result">Get Result</string>
    <string name="question1">I am the life of the party.</string>
    <string name="question2">I feel little concern for others.</string>
    <string name="question3">I am always prepared.</string>
    <string name="question4">I get stressed out easily.</string>
    <string name="question5">I have a rich vocabulary.</string>
    <string name="question6">I dont talk a lot.</string>
    <string name="question7">I am interested in people.</string>
    <string name="question8">I leave my belongings around.</string>
    <string name="question9">I am relaxed most of the time.</string>
    <string name="question10">I have a difficulty understanding abstract ideas.</string>
    <string name="question11">I feel comfortable around people.</string>
    <string name="question12">I insult people.</string>
    <string name="question13">I pay attention to details.</string>
    <string name="question14">I worry about things.</string>
    <string name="question15">I have a vivid imagination.</string>
    <string name="question16">I keep in the background.</string>
    <string name="question17">I sympathize with others feeling.</string>
    <string name="question18">I make a mess of things.</string>
    <string name="question19">I seldom feel blue.</string>
    <string name="question20">I am not interested in abstract ideas.</string>
    <string name="question21">I start conversations.</string>
    <string name="question22">I am not interested in other peoples problems.</string>
    <string name="question23">I get chores done right away.</string>
    <string name="question24">I am easily disturbed.</string>
    <string name="question25">I have excellent ideas.</string>
    <string name="question26">I have little to say.</string>
    <string name="question27">I have a soft heart.</string>
    <string name="question28">I often forget to put things back in their proper place.</string>
    <string name="question29">I get upset easily.</string>
    <string name="question30">I do not have a good imagination.</string>
    <string name="question31">I talk to a lot of different people at parties.</string>
    <string name="question32">I am not really interested in others.</string>
    <string name="question33">I like order.</string>
    <string name="question34">I change my mood a lot.</string>
    <string name="question35">I am quick to understand things.</string>
    <string name="question36">I dont like to draw attention to myself</string>
    <string name="question37">I take time out for others.</string>
    <string name="question38">I shirk my duties.</string>
    <string name="question39">I have frequent mood swings.</string>
    <string name="question40">I use difficult words.</string>
    <string name="question41">I dont mind being the center of attention.</string>
    <string name="question42">I feel others emotions.</string>
    <string name="question43">I follow a schedule.</string>
    <string name="question44">I get irritated easily.</string>
    <string name="question45">I spend time reflecting on things.</string>
    <string name="question46">I am quiet around strangers.</string>
    <string name="question47">I make people feel at ease.</string>
    <string name="question48">I am exacting in my work.</string>
    <string name="question49">I often feel blue.</string>
    <string name="question50">I am full of ideas.</string>
    <string name="questionNumber">Question %1$d/50</string>
    <string name="language">Change Language</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="radio1">Very Inaccurate</string>
    <string name="radio2">Inaccurate</string>
    <string name="radio3">Neutral</string>
    <string name="radio4">Accurate</string>
    <string name="radio5">Very Accurate</string>
    <string name="result_greeting">Your primary trait is </string>
    <string name="percentage_tv"><u>Percentage Result</u></string>
    <string name="result_ocean">OCEAN Result</string>
    <string name="percentage">%s{%}\n\n%s{%}\n\n%s{%}\n\n%s{%}\n\n%s{%}</string>
    <string name="desc">%s</string>
    <string name="strengths">Strengths</string>
    <string name="strengths_tv">%s</string>
    <string name="weaknesses">Weaknesses</string>
    <string name="weaknesses_tv">%s</string>
    <string name="o_desc">The sub-traits of openness personality trait are: Imaginative, adventurous, have high emotionality, have high artistic interests, intelligent and liberalism.</string>
    <string name="o_strength">Easy to collaborate with.\nCreative.\nLove to learn something new.\nOpen to diversity.\nGive great attention to mental imagery.</string>
    <string name="o_weakness">Easily swayed.\nTheir ideas are often unconventional.\nMany of them are often unpredictable.\nTend to avoid positions that need to set rules and guidelines.\nTend to feel many emotions simultaneously which can lead to anxiety and depression.</string>
    <string name="c_desc">The sub-traits of conscientiousness personality trait are: Well-organized, have strong sense of moral obligation, confident, achievement-striving, self-discipline and cautious.</string>
    <string name="c_strength">Organized and always come into situations prepared.\nAttentive to detail.\nHardworking.\nRarely make impulsive or careless decisions.\nTend to pay attention to detail to make sure they deliver on their promises.</string>
    <string name="c_weakness">Perfectionist.\nMay be excessively serious in some situations.\nInflexible.\nStruggle to be spontaneous.\nTend to have obsessive-compulsive disorder.</string>
    <string name="e_desc">The sub-traits of extraversion personality trait are: Friendly, gregarious, assertive, have high activity level, excitement-seeking and cheerful.</string>
    <string name="e_strength">Tend to relate well to others.\nOften well-liked in their teams and offices.\nForm quick and easy friendships.\nTheir outgoing nature leads to effective group-work.\nUsually very determined, likely to take charge, and confident.</string>
    <string name="e_weakness">May lack independence.\nCan sometimes make others uncomfortable.\nStruggle with keeping their emotions in check.\nMay be inconsiderate or sometimes socially unaware.\nOften unable to make analytical, emotionless judgements.</string>
    <string name="a_desc">The sub-traits of agreeableness personality trait are: Have high trust with people, altruistic, good at cooperation, have high morality, modest and sympathetic.</string>
    <string name="a_strength">Tend to get pleasure from taking care of people.\nGet along well with others.\nAre socially and emotionally intelligent.\nForm friendships easily.\nRefrain to judging people.</string>
    <string name="a_weakness">Struggle to assert their wants, needs and preferences.\nStruggle in situations that require tough decision.\nTend to forget to plan their own advancement.\nOften likely to be taken advantage of.\nTend to overwork themselves due to an inability to delegate properly.</string>
    <string name="n_desc">The sub-traits of neuroticism personality trait are: Anxiety, high anger level, depressed, have high self-consciousness, immoderate and vulnerable.</string>
    <string name="n_strength">Sensitive and aware in a way that some others might not be.\nLikely to be the one who is always looking out for others.\nRealistic.\nHave high self-awareness.\nValue the safety of knowing what to expect over the risk of disappointment from trying to engage in unfamiliar and unproven ways.</string>
    <string name="n_weakness">Dramatic changes in feelings.\nTend to be more anxious when they perceive the situation to be negative.\nTend to experience a lot of stress.\nOverly aware and sensitive about what others think of them.\nTend to self-doubt themselves.</string>
    <string name="emptyPassword">Password is empty!</string>
    <string name="passError">Password should be more than 6 characters!</string>
    <string name="emptyEmail">Email is empty!</string>
    <string name="emailInvalid">Email is not valid!</string>
    <string name="message_title">Congrats!</string>
    <string name="message_body">Your account is created.</string>
    <string name="posbutton">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="question_p1">[ Question 1 – 5 ]</string>
    <string name="question_p2">[ Question 6 – 10 ]</string>
    <string name="question_p3">[ Question 11 – 15 ]</string>
    <string name="question_p4">[ Question 16 – 20 ]</string>
    <string name="question_p5">[ Question 21 – 25 ]</string>
    <string name="question_p6">[ Question 26 – 30 ]</string>
    <string name="question_p7">[ Question 31 – 35 ]</string>
    <string name="question_p8">[ Question 36 – 40 ]</string>
    <string name="question_p9">[ Question 41 – 45 ]</string>
    <string name="question_p10">[ Question 46 – 50 ]</string>
</resources>